# vlm-demo

./: .env.example  .gitignore  README.md  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/api/vlm/: route.ts
docs/: mlx-vlm-extension.md
lib/: llm.ts  video.ts
services/mlx-vlm-server/: README.md  inference.py  main.py  pyproject.toml  start.sh
