[project]
name = "mlx-vlm-server"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mlx-vlm==0.5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
